Fixed Dark Mode

--- a/Soundboard/styles.css
+++ b/Soundboard/styles.css
@@ -76,3 +76,8 @@
   margin-top: 48px;
   color: #ffffff;
 }
+
+.body {
+  background-color: #404040;
+	
+}
